objects/Request_Part__c.object
<CustomObject>
    <description>Record triggers process builder and flows to create new product request with line items.</description>
    <fields>
        <fullName>CE_Code__c</fullName>
        <formula>Work_Order_Service__r.Service_Resource__r.CE_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ref__c</fullName>
        <formula>Work_Order_Service__r.Customer_s_Reference__c</formula>
        <label>Customer Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product_Name__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Name to be requested</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Requested Parts</relationshipLabel>
        <relationshipName>Requested_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Creates a request on creation</description>
        <label>Product Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>Matching Request Parts</relationshipLabel>
        <relationshipName>Matching_Request_Parts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related product transfer for this part request</description>
        <label>Product Transfer</label>
        <referenceTo>ProductTransfer</referenceTo>
        <relationshipLabel>Request Parts</relationshipLabel>
        <relationshipName>Request_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number to order</description>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service this Part request is for</description>
        <label>Service</label>
        <referenceTo>CKSW_BASE__Service__c</referenceTo>
        <relationshipLabel>Requested Parts</relationshipLabel>
        <relationshipName>Requested_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting_Order</fullName>
                    <default>true</default>
                    <label>Awaiting Order</label>
                </value>
                <value>
                    <fullName>Partially Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Quantity_Received__c</fullName>
        <description>Roll up of all Received Part Quantity</description>
        <label>Total Quantity Received</label>
        <summarizedField>Received_Part__c.Quantity_Received__c</summarizedField>
        <summaryForeignKey>Received_Part__c.Request_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Order_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Request Parts (Service Work Order)</relationshipLabel>
        <relationshipName>Request_Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Request Parts</relationshipLabel>
        <relationshipName>Request_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Awaiting_Request</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting_Order</value>
        </filters>
        <label>Awaiting Request</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partial_Orders_Received</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Partially Received</value>
        </filters>
        <label>Partial Orders Received</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RPN-{00000}</displayFormat>
        <label>Request Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Qty_has_to_be_1_or_more</fullName>
        <active>true</active>
        <description>Qty cannot be less than one</description>
        <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be 1 or more units</errorMessage>
    </validationRules>
</CustomObject>